--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -1,1 +1,39 @@
-<p>products works!</p>
+<div class="container-fluid main-content">
+    <div class="row">
+        <section class="col-md-12">
+            <div class="mt-3 mb-3">
+                <h3> Product List</h3>
+            </div>
+            <table class="table">
+                <thead class="thead-light thead">
+                    <tr>
+                        <th scope="col">Product Id</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Product Description</th>
+                        <th scope="col">Created Date</th>
+                        <th scope="col">Quantity in KG</th>
+                        <th scope="col">Unit Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Rice</td>
+                        <td>White Basmathi Rice imported from Pakistan</td>
+                        <td>Jan 29, 2020</td>
+                        <td>100</td>
+                        <td>Rs. 400</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Flour</td>
+                        <td>Super Fine Whole Grain General Purpose Flour</td>
+                        <td>Jan 29, 2020</td>
+                        <td>50</td>
+                        <td>Rs. 199</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </div>
+</div>
