View and edit products

--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -13,6 +13,7 @@
                         <th scope="col">Created Date</th>
                         <th scope="col">Quantity in KG</th>
                         <th scope="col">Unit Price</th>
+                        <th scope="col">Product Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -23,6 +24,10 @@
                         <td>Jan 29, 2020</td>
                         <td>100</td>
                         <td>Rs. 400</td>
+                        <td>
+                            <i class="fa fa-eye icon"></i>
+                            <i class="fa fa-pencil-square-o icon"></i>
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
@@ -31,6 +36,10 @@
                         <td>Jan 29, 2020</td>
                         <td>50</td>
                         <td>Rs. 199</td>
+                        <td>
+                            <i class="fa fa-eye icon"></i>
+                            <i class="fa fa-pencil-square-o icon"></i>
+                        </td>
                     </tr>
                 </tbody>
             </table>
