--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -17,25 +17,13 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Rice</td>
-                        <td>White Basmathi Rice imported from Pakistan</td>
-                        <td>Jan 29, 2020</td>
-                        <td>100</td>
-                        <td>Rs. 400</td>
-                        <td>
-                            <i class="fa fa-eye icon"></i>
-                            <i class="fa fa-pencil-square-o icon"></i>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Flour</td>
-                        <td>Super Fine Whole Grain General Purpose Flour</td>
-                        <td>Jan 29, 2020</td>
-                        <td>50</td>
-                        <td>Rs. 199</td>
+                    <tr *ngFor="let product of products">
+                        <th scope="row">{{product.id}}</th>
+                        <td>{{product.name}}</td>
+                        <td>{{product.description}}</td>
+                        <td>{{product.created}}</td>
+                        <td>{{product.qty}}</td>
+                        <td>{{product.price}}</td>
                         <td>
                             <i class="fa fa-eye icon"></i>
                             <i class="fa fa-pencil-square-o icon"></i>
