--- a/smart-grocery/src/app/products/products.component.css
+++ b/smart-grocery/src/app/products/products.component.css
@@ -2,3 +2,12 @@ td i{
     display: inline-block;
     padding: 5px;
 }
+
+thead tr{
+    background-color: #ccc;
+}
+
+tbody tr:hover{
+    background-color: #789;
+    color:white;
+}
