--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -22,7 +22,7 @@
                         <td>{{product.name}}</td>
                         <td>{{product.description}}</td>
                         <td>{{product.created}}</td>
-                        <td>{{product.qty}}</td>
+                        <td [ngClass]="product.qty < 50 ? 'bg-danger' : ''">{{product.qty}}</td>
                         <td>{{product.price}}</td>
                         <td>
                             <i class="fa fa-eye icon"></i>
