--- a/smart-grocery/src/app/products/products.component.css
+++ b/smart-grocery/src/app/products/products.component.css
@@ -15,3 +15,9 @@ tbody tr:hover{
 tr.active {
     background-color: #eee;
 }
+
+.grocery-btn{
+    display: inline-block;
+    padding: 5px;
+    margin: 5px;
+}
