--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -20,7 +20,7 @@
                     <tr *ngFor="let product of products let i = index" [ngClass]="rowIndex === i ? 'active' : ''" (click)="product_clicked(i)">
                         <th scope="row">{{product.id}}</th>
                         <td>{{product.name | uppercase}}</td>
-                        <td>{{product.description}}</td>
+                        <td>{{product.description | contentLimiter}}</td>
                         <td>{{product.created | date: "MM/dd/YYYY"}}</td>
                         <td [ngClass]="product.qty < 50 ? 'bg-danger' : ''">{{product.qty}}</td>
                         <td>{{product.price | currency: 'LKR'}}</td>
