--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid main-content">
     <div class="row">
-        <section class="col-md-12">
+        <section [ngClass]="showAddProduct ? 'col-md-7' : 'col-md-12'">
             <div class="mt-3 mb-3">
                 <h3> Product List</h3>
+                <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Show</button>
+                <button *ngIf="showAddProduct" type="button" class="btn btn-outline-secondary" (click)="hideAddProducts()">Hide</button>
             </div>
             <table class="table">
                 <thead class="thead-light thead">
