logging life cycle hooks

--- a/smart-grocery/src/app/products/products.component.css
+++ b/smart-grocery/src/app/products/products.component.css
@@ -21,3 +21,9 @@ tr.active {
     padding: 5px;
     margin: 5px;
 }
+
+.product-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
