--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid main-content">
     <div class="row">
         <section [ngClass]="showAddProduct ? 'col-md-7' : 'col-md-12'">
-            <div class="mt-3 mb-3">
+            <div class="mt-3 mb-3 product-header">
                 <h3> Product List</h3>
-                <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Show</button>
-                <button *ngIf="showAddProduct" type="button" class="btn btn-outline-secondary" (click)="hideAddProducts()">Hide</button>
+                <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Add Product</button>
+                <button *ngIf="showAddProduct" type="button" class="btn btn-outline-secondary" (click)="hideAddProducts()">Close Product</button>
             </div>
-            <table class="table">
+            <table class="table table-responsive">
                 <thead class="thead-light thead">
                     <tr>
                         <th scope="col">Product Id</th>
@@ -33,6 +33,9 @@
                     </tr>
                 </tbody>
             </table>
+        </section>
+        <section class="col-md-5" *ngIf="showAddProduct">
+            <app-add-product></app-add-product>
         </section>
     </div>
 </div>
