--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -2,7 +2,10 @@
     <div class="row">
         <section [ngClass]="showAddProduct ? 'col-md-7' : 'col-md-12'">
             <div class="mt-3 mb-3 product-header">
-                <h3> Product List</h3>
+                <h3>Product List <span *ngIf="!isLoading" (click)="refresh()" style="cursor: pointer;">
+                    <i class="fa fa-refresh" aria-hidden="true"></i>
+                </span>
+                <i *ngIf="isLoading" class="fa fa-refresh fa-spin fa-fw" aria-hidden="true"></i></h3>
                 <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Add Product</button>
                 <button *ngIf="showAddProduct" type="button" class="btn btn-outline-secondary" (click)="hideAddProducts()">Close Product</button>
             </div>
