Added cancel button

--- a/smart-grocery/src/app/add-product/add-product.component.html
+++ b/smart-grocery/src/app/add-product/add-product.component.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="col-12 text-end mt-5">
-            <button type="button" class="btn btn btn-outline-secondary me-2">cancel</button>
+            <button type="button" class="btn btn btn-outline-secondary me-2" (click)="cancel()">cancel</button>
             <button type="submit" class="btn btn-outline-primary" [disabled]="productFrom.invalid">Submit</button>
         </div>
     </form>
