Product component improvements

--- a/smart-grocery/src/app/products/products.component.css
+++ b/smart-grocery/src/app/products/products.component.css
@@ -27,3 +27,8 @@ tr.active {
     justify-content: space-between;
     align-items: center;
 }
+
+h3 span{
+    display: inline-block;
+    margin-left: 10px;
+}
