--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -2,10 +2,10 @@
     <div class="row">
         <section [ngClass]="showAddProduct ? 'col-md-7' : 'col-md-12'">
             <div class="mt-3 mb-3 product-header">
-                <h3>Product List <span *ngIf="!isLoading" (click)="refresh()" style="cursor: pointer;">
-                    <i class="fa fa-refresh" aria-hidden="true"></i>
-                </span>
-                <i *ngIf="isLoading" class="fa fa-refresh fa-spin fa-fw" aria-hidden="true"></i></h3>
+                <h3>Product List 
+                    <span *ngIf="!isLoading" (click)="refresh()" style="cursor: pointer;"><i class="fa fa-refresh" aria-hidden="true"></i></span>
+                    <span *ngIf="isLoading" ><i class="fa fa-refresh fa-spin" aria-hidden="true"></i></span>
+                </h3>
                 <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Add Product</button>
                 <button *ngIf="showAddProduct" type="button" class="btn btn-outline-secondary" (click)="hideAddProducts()">Close Product</button>
             </div>
@@ -22,7 +22,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let product of products let i = index" [ngClass]="rowIndex === i ? 'active' : ''" (click)="product_clicked(i)">
+                    <tr *ngFor="let product of products let i = index" [ngClass]="rowIndex === i ? 'active' : ''" (click)="product_clicked(i, product)">
                         <th scope="row">{{product.id}}</th>
                         <td>{{product.productName | uppercase}}</td>
                         <td>{{product.description | contentLimiter}}</td>
@@ -31,14 +31,31 @@
                         <td>{{product.unitPrice | currency: 'LKR'}}</td>
                         <td>
                             <button class="grocery-btn" [disabled]="rowIndex !== i || !isRowSelected" ><i class="fa fa-eye icon"></i></button>
-                            <button class="grocery-btn" [disabled]="rowIndex !== i || !isRowSelected" ><i class="fa fa-pencil-square-o icon"></i></button>
+                            <button
+                            type="button"
+                            [disabled]="rowIndex != i"
+                            class="btn-xs icon"
+                            (click)="OpenEditProductView()"
+                          >
+                            <i class="fa fa-pencil-square-o"></i>
+                          </button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </section>
-        <section class="col-md-5" *ngIf="showAddProduct">
-            <app-add-product></app-add-product>
-        </section>
+        <section class="col-md-5" *ngIf="showAddProduct || showEditProduct">
+            <app-add-product
+              *ngIf="showAddProduct"
+              (cancelAddView)="hideAddProducts()"
+              (productAddEvent)="updateProductList()"
+            ></app-add-product>
+            <app-edit-product
+              *ngIf="showEditProduct"
+              [product]="selectedProduct"
+              (cancelEditView)="closeEditView()"
+              (productAddEvent)="updateProductList()"
+            ></app-edit-product>
+          </section>
     </div>
 </div>
