--- a/smart-grocery/src/app/add-product/add-product.component.html
+++ b/smart-grocery/src/app/add-product/add-product.component.html
@@ -80,7 +80,8 @@
 
         <div class="col-12 text-end mt-5">
             <button type="button" class="btn btn btn-outline-secondary me-2" (click)="cancel()">cancel</button>
-            <button type="submit" class="btn btn-outline-primary" [disabled]="productFrom.invalid">Submit</button>
+            <button type="submit" class="btn btn-outline-primary" [disabled]="productFrom.invalid">Submit <i
+                *ngIf="isDataUploading" class="fa fa-spinner fa-pulse fa-fw"></i></button>
         </div>
     </form>
 </div>
