--- a/smart-grocery/src/app/products/products.component.css
+++ b/smart-grocery/src/app/products/products.component.css
@@ -1,3 +1,8 @@
+table{
+    border-radius: 5px;
+    overflow: hidden;
+}
+
 td i{
     display: inline-block;
     padding: 5px;
@@ -31,4 +36,16 @@ tr.active {
 h3 span{
     display: inline-block;
     margin-left: 10px;
+}
+
+.textright{
+    text-align: right;
+}
+
+td button{
+    margin: 10px;
+    border: none;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
 }
