--- a/smart-grocery/src/app/products/products.component.html
+++ b/smart-grocery/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid main-content">
     <div class="row">
-        <section [ngClass]="showAddProduct ? 'col-md-7' : 'col-md-12'">
+        <section [ngClass]="showAddProduct || showEditProduct ? 'col-md-7' : 'col-md-12'">
             <div class="mt-3 mb-3 product-header">
                 <h3>Product List 
                     <span *ngIf="!isLoading" (click)="refresh()" style="cursor: pointer;"><i class="fa fa-refresh" aria-hidden="true"></i></span>
@@ -16,8 +16,8 @@
                         <th scope="col">Product Name</th>
                         <th scope="col">Product Description</th>
                         <th scope="col">Created Date</th>
-                        <th scope="col">Quantity in KG</th>
-                        <th scope="col">Unit Price</th>
+                        <th scope="col" class="textright">Quantity in KG</th>
+                        <th scope="col" class="textright">Unit Price</th>
                         <th scope="col">Product Actions</th>
                     </tr>
                 </thead>
@@ -27,8 +27,8 @@
                         <td>{{product.productName | uppercase}}</td>
                         <td>{{product.description | contentLimiter}}</td>
                         <td>{{product.createdDate | date: "MM/dd/YYYY"}}</td>
-                        <td [ngClass]="product.quantity < 50 ? 'bg-danger' : ''">{{product.quantity}}</td>
-                        <td>{{product.unitPrice | currency: 'LKR'}}</td>
+                        <td [ngClass]="product.quantity < 50 ? 'bg-danger' : ''" class="textright">{{product.quantity}}</td>
+                        <td class="textright">{{product.unitPrice | currency: 'LKR '}}</td>
                         <td>
                             <button class="grocery-btn" [disabled]="rowIndex !== i || !isRowSelected" ><i class="fa fa-eye icon"></i></button>
                             <button
