--- a/smart-grocery/src/app/app.component.html
+++ b/smart-grocery/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
+          <a class="nav-link" routerLink="product">Products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Suppliers</a>
@@ -16,4 +16,4 @@
     </div>
   </div>
 </nav>
-<app-products></app-products>
+<router-outlet></router-outlet>
